@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -101,13 +102,13 @@
     <dependency>
       <groupId>org.testfx</groupId>
       <artifactId>testfx-core</artifactId>
-      <version>4.0.16-alpha</version> <!-- Or the latest stable version -->
+      <version>4.0.16-alpha</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.testfx</groupId>
       <artifactId>testfx-junit5</artifactId>
-      <version>4.0.16-alpha</version> <!-- Or the latest stable version -->
+      <version>4.0.16-alpha</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -124,11 +125,19 @@
   </repositories>
 
   <build>
+    <sourceDirectory>SoSe25/src/main/java</sourceDirectory>
+    <testSourceDirectory>SoSe25/src/test/java</testSourceDirectory>
     <resources>
       <resource>
-        <directory>src/main/resources</directory>
+        <directory>SoSe25/src/main/resources</directory>
       </resource>
     </resources>
+    <testResources>
+      <testResource>
+        <directory>SoSe25/src/test/resources</directory>
+      </testResource>
+    </testResources>
+    
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -149,6 +158,7 @@
           </toolchains>
         </configuration>
       </plugin>
+      
       <!-- Maven Compiler Plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -166,16 +176,20 @@
         <version>0.0.8</version>
         <configuration>
           <mainClass>de.uni_marburg.sp25.UserStoryApp</mainClass>
+          <commandlineArgs>--add-opens=java.base/sun.misc=ALL-UNNAMED --enable-native-access=ALL-UNNAMED</commandlineArgs>
         </configuration>
       </plugin>
 
-      <!-- Maven Surefire Plugin -->
+      <!-- Maven Surefire Plugin for tests -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.1.2</version>
         <configuration>
-          <argLine>--add-opens=java.base/sun.misc=ALL-UNNAMED</argLine>
+          <argLine>
+            --add-opens=java.base/sun.misc=ALL-UNNAMED 
+            --enable-native-access=ALL-UNNAMED
+          </argLine>
         </configuration>
       </plugin>
     </plugins>
